--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
   <%= form_with model: @user, url: registration_path(resource_name) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
@@ -37,4 +37,4 @@
   </div>
 <% end %>
 
-<%= render "public/shared/links" %>
+<%#= render "public/shared/links" %>
