--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
          <nav class="navber navber-expand-lg" style="background-color: #444444">
            <% if user_signed_in? %>
              <li class="nav-item">
+               <%= link_to 'マイページ', user_path(current_user.id) %>
+             </li>
+             <li>
                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
              </li>
            <% else %>
