--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,5 +1,9 @@
 <h2>マイページ</h2>
 <div>
   <%= image_tag @user.get_profile_image(100,100) %>
-  <h3><%= @user.name %></h3>
+  <h3><%= @user.nickname %></h3>
+  <h3><%= @user.place %></h3>
+  <h3><%= @user.sex %></h3>
+  <h3><%= @user.year %></h3>
+  <%= link_to '編集', edit_user_path, class: "btn btn-primary" %>
 </div>
