--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -20,12 +20,27 @@
             <div class="field">
               <%= f.label :'居住地' %>
               <%= f.hidden_field :place, :value => @user.id %>
-              <%= f.select :place, [['北海道','北海道'], ['青森県','青森県'], ['岩手県','岩手県'], ['宮城県','宮城県'], ['秋田県','秋田県'], ['山形県','山形県'], ['福島県','福島県'], ['茨城県','茨城県'], ['栃木県','栃木県'], ['群馬県','群馬県'], ['埼玉県','埼玉県'], ['千葉県','千葉県'], ['東京都','東京都'], ['神奈川県','神奈川県'], ['新潟県','新潟県'], ['富山県','富山県'], ['石川県','石川県'], ['福井県','福井県'], ['山梨県','山梨県'], ['長野県','長野県'], ['岐阜県','岐阜県'], ['静岡県','静岡県'], ['愛知県','愛知県'], ['三重県','三重県'], ['滋賀県','滋賀県'], ['京都府','京都府'], ['大阪府','大阪府'], ['兵庫県','兵庫県'], ['奈良県','奈良県'], ['和歌山県','和歌山県'], ['鳥取県','鳥取県'], ['島根県','島根県'], ['岡山県','岡山県'], ['広島県','広島県'], ['山口県','山口県'], ['徳島県','徳島県'], ['香川県','香川県'], ['愛媛県','愛媛県'], ['高知県','高知県'], ['福岡県','福岡県'], ['佐賀県','佐賀県'], ['長崎県','長崎県'], ['熊本県','熊本県'], ['大分県','大分県'], ['宮崎県','宮崎県'], ['鹿児島県','鹿児島県'], ['沖縄県','沖縄県']], {include_blank: '[未選択]'}  %>
+              <%= f.select :place, [['北海道','北海道'], ['青森県','青森県'], ['岩手県','岩手県'], ['宮城県','宮城県'], ['秋田県','秋田県'], ['山形県','山形県'], ['福島県','福島県'], ['茨城県','茨城県'], ['栃木県','栃木県'], ['群馬県','群馬県'], ['埼玉県','埼玉県'], ['千葉県','千葉県'], ['東京都','東京都'], ['神奈川県','神奈川県'], ['新潟県','新潟県'], ['富山県','富山県'], ['石川県','石川県'], ['福井県','福井県'], ['山梨県','山梨県'], ['長野県','長野県'], ['岐阜県','岐阜県'], ['静岡県','静岡県'], ['愛知県','愛知県'], ['三重県','三重県'], ['滋賀県','滋賀県'], ['京都府','京都府'], ['大阪府','大阪府'], ['兵庫県','兵庫県'], ['奈良県','奈良県'], ['和歌山県','和歌山県'], ['鳥取県','鳥取県'], ['島根県','島根県'], ['岡山県','岡山県'], ['広島県','広島県'], ['山口県','山口県'], ['徳島県','徳島県'], ['香川県','香川県'], ['愛媛県','愛媛県'], ['高知県','高知県'], ['福岡県','福岡県'], ['佐賀県','佐賀県'], ['長崎県','長崎県'], ['熊本県','熊本県'], ['大分県','大分県'], ['宮崎県','宮崎県'], ['鹿児島県','鹿児島県'], ['沖縄県','沖縄県'], ['海外','海外']], {include_blank: '--未選択--'}  %>
             </div>
             <div class="field">
               <%= f.label :'性別' %>
               <%= f.hidden_field :sex, :value => @user.id %>
-              <%= f.select :sex, [['女性',0], ['男性',1]], {include_blank: '[未選択]'} %>
+              <%= f.select :sex, [['女性', "women"], ['男性', "men"], ['その他', "other"]], {include_blank: '--未選択--'} %>
+            </div>
+            <div class="field">
+              <%= f.label :'年齢' %>
+              <%= f.hidden_field :year, :value => @user.id %>
+              <%= f.select :year, [['19歳以下', "under19"], ['20~24歳', "first20"], ['25歳~29歳', "second20"], ['30歳~34歳', "first30"], ['35歳~39歳', "second30"], ['40歳~44歳', "first40"], ['45歳~49歳', "second40"], ['50歳~54歳', "first50"], ['55歳~59歳', "second50"], ['60歳以上', "over60"], ], {include_blank: '--未選択--'} %>
+            </div>
+            <div class="field">
+              <div>
+                <fieldset>
+                <%= f.label :'好きなフェス(3件まで)' %>
+                <%= f.fields_for :favorite_events do |event| %>
+                <%= event.text_field :event_name %>
+               <% end %>
+              </fieldset>
+              </div>
             </div>
           </tr>
           <%= f.submit "更新", class: "btn btn-primary" %>
