--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,17 +26,20 @@
        </div>
      </div>
 
-     <div class="site-header__bottom">
-       <div class="wrapper site-header__wrapper bottom">
-         <nav class="navber navber-expand-lg" style="background-color: #444444">
-           <% if user_signed_in? %>
-           　<li class="nav-item">
+     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #444444">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav">
+      <% if user_signed_in? %>
+            <li class="nav-item">
                <%= link_to community_search_path, class: 'nav-link text-light' do %>
                <button type="button" class="btn btn-light">フェス検索</button>
                <% end %>
               </li>
 
-           　<li class="nav-item">
+            <li class="nav-item">
                <%= link_to user_path(current_user.id), class: 'nav-link text-light' do %>
                <button type="button" class="btn btn-light">マイページ</button>
                <% end %>
@@ -74,7 +77,7 @@
               </li>
 
            <% else %>
-           　<li class="nav-item">
+             <li class="nav-item">
                <%= link_to new_user_registration_path, class: 'nav-link text-light' do %>
                <button type="button" class="btn btn-light">新規登録</button>
                <% end %>
@@ -86,19 +89,15 @@
                <% end %>
               </li>
            <% end %>
-         </nav>
-       </div>
-     </div>
+         </ul>
+      </div>
+    </nav>
     </header>
     <%= yield %>
     <div style="position: absolute; bottom: 0; width: 100%;">
-    <footer class="text-white mt-5 pb-2" style="background-color: #000000">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <h6 class="text-white mt-2 mb-3">© All rights reserved by JM.Inc.</h6>
-          </div>
-        </div>
+    <footer class="text-white mt-5" style="background-color: #000000">
+      <div class="container pt-2 pb-3">
+            <h6 class="text-white text-center">© All rights reserved by JM.Inc.</h6>
       </div>
     </footer>
     </div>
