--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,18 +1,79 @@
 <div class="container">
   <div class="row">
-  <div class="col-5"><h3>コミュニティページ一覧・追加</h3></div>
+    <div class="col-5"><h3>コミュニティページ一覧・追加</h3></div>
   </div>
+</div>
 
+<div class="container">
   <div class="row">
-    <%= form_with model: @page, url: admin_communities_path, method: :post do |f| %>
+    <%= form_with model: @community, url: admin_communities_path, method: :post do |f| %>
     <table class="table-borderless">
         <tr>
-          <td><h4>フェス名</h4></td><br>
-          <td><%= f.text_field :fes_name %></td>
+          <td><h5>開催年</h5></td>
+          <td><%= f.text_field :venue_year, :size=>'10' %></td>
+
+          <td><h5>開催月</h5></td>
+          <td><%= f.hidden_field :venue_month, :value => @communities %>
+              <%= f.select :venue_month, [['1月', "1"], ['2月', "2"], ['3月', "3"], ['4月', "4"], ['5月', "5"], ['6月', "6"], ['7月', "7"], ['8月', "8"], ['9月', "9"], ['10月', "10"], ['11月', "11"], ['12月', "12"], ], {include_blank: '--未選択--'} %></td>
+
+          <td><h5>開催地</h5></td>
+          <td><%= f.hidden_field :venue, :value => @communities %>
+              <%= f.select :venue, [['北海道','北海道'], ['青森県','青森県'], ['岩手県','岩手県'], ['宮城県','宮城県'], ['秋田県','秋田県'], ['山形県','山形県'], ['福島県','福島県'], ['茨城県','茨城県'], ['栃木県','栃木県'], ['群馬県','群馬県'], ['埼玉県','埼玉県'], ['千葉県','千葉県'], ['東京都','東京都'], ['神奈川県','神奈川県'], ['新潟県','新潟県'], ['富山県','富山県'], ['石川県','石川県'], ['福井県','福井県'], ['山梨県','山梨県'], ['長野県','長野県'], ['岐阜県','岐阜県'], ['静岡県','静岡県'], ['愛知県','愛知県'], ['三重県','三重県'], ['滋賀県','滋賀県'], ['京都府','京都府'], ['大阪府','大阪府'], ['兵庫県','兵庫県'], ['奈良県','奈良県'], ['和歌山県','和歌山県'], ['鳥取県','鳥取県'], ['島根県','島根県'], ['岡山県','岡山県'], ['広島県','広島県'], ['山口県','山口県'], ['徳島県','徳島県'], ['香川県','香川県'], ['愛媛県','愛媛県'], ['高知県','高知県'], ['福岡県','福岡県'], ['佐賀県','佐賀県'], ['長崎県','長崎県'], ['熊本県','熊本県'], ['大分県','大分県'], ['宮崎県','宮崎県'], ['鹿児島県','鹿児島県'], ['沖縄県','沖縄県'], ['海外','海外']], {include_blank: '--未選択--'}  %></td>
+
+          <td><h5>フェス名</h5></td><br>
+          <td><%= f.text_field :fes_name, :size=>'50' %></td>
           <td><%= f.submit '新規登録', class: 'btn btn-success' %></td>
           <% end %>
         </tr>
     </table>
   </div>
+</div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-5">
+        <table class="table-borderless">
+        <%= form_with url: admin_root_path, method: :get do |f| %>
+      <tr>
+        <td><%= f.label :開催年 %></td>
+        <td><%= f.text_field :venue_year, :size=>'7' %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :開催月 %></td>
+        <td><%= f.hidden_field :venue_month, :value => @communities %>
+            <%= f.select :venue_month, [['1月', "1"], ['2月', "2"], ['3月', "3"], ['4月', "4"], ['5月', "5"], ['6月', "6"], ['7月', "7"], ['8月', "8"], ['9月', "9"], ['10月', "10"], ['11月', "11"], ['12月', "12"], ], {include_blank: '--未選択--'} %></td>
+      </tr>
+      <tr>
+        <td><%= f.submit '表示', class: 'btn btn-primary' %></td>
+      </tr>
+    <% end %>
+      </table>
+      </div>
+
+      <div class="col-lg-7">
+        <% if @year.present? && @month.present? %>
+          <h3><%= @year %>年<%= @month %>月開催のフェス一覧</h3>
+        <% else %>
+          <h3>フェス一覧</h3>
+        <% end %>
+        <table class="table-borderless">
+          <% @communities.each do |community| %>
+            <tr>
+              <td>
+                <span><%= community.venue_year %>年<%= community.venue_month %>月</span>
+              </td>
+              <td>
+                <span><%= link_to community.fes_name, community_path(community.id) %></span>
+              </td>
+              <td>
+                <span><%= community.venue %></span>
+              </td>
+                <td><%= link_to '編集', edit_admin_community_path(community.id), class: 'btn btn-success' %></td>
+                <td><%= link_to '削除', admin_community_path(community.id), method: :delete, "data-confirm" => "本当に削除しますか？", class: 'btn btn-danger' %></td>
+            </tr>
+        <% end %>
+        </table>
+      </div>
+    </div>
+  </div>
 
