--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -1,5 +1,25 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4"></h2></div>
+    <div class="col-md-4"><h2></h2></div>
   </div>
 </div>
+
+<% @community.comments.each do |comment| %>
+   <P><%= comment.user.nickname %> : <%= comment.created_at %></p>
+
+   <p><%= comment.comment %></p>
+<% end %>
+
+
+<%= form_with(model: @comment, local:true) do |f| %>
+    <div class="form-group">
+        <p>
+            <%= f.label 'コメント(255文字未満)' %>
+            <%= f.text_area :comment,class: 'form-control' %>
+            <%= f.hidden_field :community_id, value: @community.id %>
+        </p>
+    </div>
+    <div class="form_action row">
+        <%= f.submit '送信',class: 'btn btn-primary' %>
+    </div>
+<% end %>
