--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -3,12 +3,39 @@
     <div class="col-md-4"><h2></h2></div>
   </div>
 </div>
+<div class="container">
+      <% @community.comments.each do |comment| %>
+      <div class="row">
+        <tr>
+          <%= link_to communities_path(comment.user_id) do %>
+          <%= image_tag comment.user.get_profile_image(100,100) %>
+          <% end %>
+          <%= comment.user.nickname %>
+        </tr>
+      </div>
+      <div class="row">
+        <tr>
+          <%= comment.community.fes_name %>
+          <%= comment.comment %>
+          <%= comment.created_at %>
 
-<% @community.comments.each do |comment| %>
-   <P><%= comment.user.nickname %> : <%= comment.created_at %></p>
-
-   <p><%= comment.comment %></p>
-<% end %>
+          <% if comment.gooded_by?(current_user) %>
+          <p>
+            <%= link_to comment_goods_path(comment), method: :delete do %>
+           ♥<%= comment.goods.count %> いいね
+          <% end %>
+         </p>
+          <% else %>
+         <p>
+          <%= link_to comment_goods_path(comment), method: :post do %>
+          ♡<%= comment.goods.count %> いいね
+          <% end %>
+         </p>
+        <% end %>
+        </tr>
+      </div>
+     <% end %>
+</div>
 
 
 <%= form_with(model: @comment, local:true) do |f| %>
@@ -20,6 +47,6 @@
         </p>
     </div>
     <div class="form_action row">
-        <%= f.submit '送信',class: 'btn btn-primary' %>
+        <%= f.submit '送信',class: 'btn btn-info' %>
     </div>
 <% end %>
