--- a/app/views/public/communities/search.html.erb
+++ b/app/views/public/communities/search.html.erb
@@ -51,7 +51,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4"><h2>フェス検索</h2></div>
+    <div class="col-md-4"><h2>フェス検索結果</h2></div>
   </div>
 </div>
 
