--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,14 @@
-<h2>about</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-10"><br>
+      <h3 class="text-center">Concept</h3><br>
+      <table class="table table-sm">
+        <tr>
+          <p class="text-center">全国各地で開催される音楽フェスの総合コミュニティサイトです。</p>
+          <p class="text-center">全国の音楽が好き、フェス・ライブが好きな人たち同士がLIVERS HIGH‼を通じて交流を深めて、</p>
+          <p class="text-center">フェス当日がより良い１日になることを目的としています。</p>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
