--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -4,10 +4,19 @@
   <div class="row">
     <div class="col-lg-10">
       <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+      <% if @user.errors.any? %>
+        <div class="alert alert-danger">
+          <ul class="mb-0">
+            <% @user.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
       <table class="table-borderless">
         <tbody>
           <tr>
-            <label for="inputImage">アイコン</label>
+            <label for="inputImage">アイコン( png / jpg / jpeg )</label>
           　<%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
           </tr>
 
