--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-5"><h3>コミュニティページ一覧・追加</h3></div>
+    <div class="col-md-6 mx-auto"><h2>コミュニティページ一覧・追加</h2></div>
   </div>
 </div>
 
