--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-  <div class="col-md-6"><h2><%= @user.full_name %>さんのユーザー情報編集</h2></div>
+    <div class="col-md-6 mx-auto"><h2><%= @user.full_name %>さんのユーザー情報編集</h2></div>
   </div>
 </div>
 
