--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-10"><br>
+    <div class="col-lg-10 mx-auto"><br>
       <h3 class="text-center">Concept</h3><br>
       <table class="table table-sm">
         <tr>
