--- a/app/views/public/users/good.html.erb
+++ b/app/views/public/users/good.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-7"><h2>いいね履歴一覧</h2></div>
+    <div class="col-md-3 mx-auto"><h2>いいね履歴一覧</h2></div>
   </div>
 </div>
 
@@ -20,6 +20,20 @@
           <%= good.comment.comment %>
           <%= good.comment.created_at %>
         </tr>
+
+        <% if good.comment.gooded_by?(current_user) %>
+          <p>
+            <%= link_to comment_goods_path(good.comment), method: :delete do %>
+           ♥<%= good.comment.goods.count %> いいね
+          <% end %>
+         </p>
+          <% else %>
+         <p>
+          <%= link_to comment_goods_path(good.comment), method: :post do %>
+          ♡<%= good.comment.goods.count %> いいね
+          <% end %>
+         </p>
+        <% end %>
       </div>
      <% end %>
 </div>
