--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-7"><h2>マイページ</h2></div>
+    <div class="col-md-3 mx-auto"><h2>マイページ</h2></div>
   </div>
 </div>
 
@@ -44,7 +44,7 @@
     <div class="col-lg-4">
       <p><h2>お気に入りフェス</h2></p>
       <% @user.favorite_events.each do |favorite_event| %>
-        <h3><%= favorite_event.event_name %></h3>
+        <h4><%= favorite_event.event_name %></h4>
       <% end %>
     </div>
 
