--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -63,7 +63,7 @@
                 <span><%= community.venue_year %>年<%= community.venue_month %>月</span>
               </td>
               <td>
-                <span><%= link_to community.fes_name, community_path(community.id) %></span>
+                <span><%= community.fes_name %></span>
               </td>
               <td>
                 <span><%= community.venue %></span>
