--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="position-relative">
     <header class="site-header">
       <div class="site-header__top">
         <div class="wrapper site-header__wrapper top">
@@ -102,10 +102,10 @@
     </nav>
     </header>
     <%= yield %>
-    <div style="position: absolute; bottom: 0; width: 100%;">
-    <footer class="text-white mt-5" style="background-color: #000000">
-      <div class="container pt-2 pb-3">
-            <h6 class="text-white text-center">© All rights reserved by JM.Inc.</h6>
+    <div class="site-footer position-absolute bottom-0" style="width: 100%; height: 50px; background-color: #000000;">
+    <footer>
+      <div class="text-center mt-3">
+            <div><h6 class="text-white">© All rights reserved by JM.Inc.</h6></div>
       </div>
     </footer>
     </div>
