--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -1,24 +1,29 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4"><h2></h2></div>
+    <div class="col-md-6 mx-auto"><h4><%= @community.fes_name %></h4></div>
   </div>
 </div>
+
 <div class="container">
       <% @community.comments.each do |comment| %>
       <div class="row">
-        <tr>
-          <%= link_to communities_path(comment.user_id) do %>
-          <%= image_tag comment.user.get_profile_image(100,100) %>
-          <% end %>
-          <%= comment.user.nickname %>
-        </tr>
-      </div>
-      <div class="row">
-        <tr>
-          <%= comment.community.fes_name %>
-          <%= comment.comment %>
-          <%= comment.created_at %>
+        <div class="col-2">
+          <div class="center-block">
+            <%= link_to communities_path(comment.user_id) do %>
+            <%= image_tag comment.user.get_profile_image(100,100) %>
+            <% end %>
+            <%= comment.user.nickname %>
+          </div>
+        </div>
 
+      <div class="col-8">
+          <b><%= comment.community.fes_name %></b>
+          <p><%= comment.comment %></p>
+      </div>
+
+      <div class="col-2">
+          <div style="width: 500px;">
+              <%= comment.created_at %>
           <% if comment.gooded_by?(current_user) %>
           <p>
             <%= link_to comment_goods_path(comment), method: :delete do %>
@@ -32,7 +37,8 @@
           <% end %>
          </p>
         <% end %>
-        </tr>
+        </div>
+        </div>
       </div>
      <% end %>
 </div>
