--- a/app/views/public/users/good.html.erb
+++ b/app/views/public/users/good.html.erb
@@ -7,20 +7,23 @@
 <div class="container">
       <% @goods.each do |good| %>
       <div class="row">
-        <tr>
-          <%= link_to communities_path(good.comment.user_id) do %>
+        <div class="col-2">
+          <div class="center-block">
+            <%= link_to communities_path(good.comment.user_id) do %>
           <%= image_tag good.comment.user.get_profile_image(100,100) %>
           <% end %>
           <%= good.comment.user.nickname %>
-        </tr>
-      </div>
-      <div class="row">
-        <tr>
-          <%= good.comment.community.fes_name %>
-          <%= good.comment.comment %>
-          <%= good.comment.created_at %>
-        </tr>
+          </div>
+        </div>
 
+        <div class="col-8">
+          <b><%= good.comment.community.fes_name %></b>
+          <p><%= good.comment.comment %></p>
+        </div>
+
+        <div class="col-2">
+          <div style="width: 500px;">
+            <%= good.comment.created_at %>
         <% if good.comment.gooded_by?(current_user) %>
           <p>
             <%= link_to comment_goods_path(good.comment), method: :delete do %>
@@ -34,6 +37,8 @@
           <% end %>
          </p>
         <% end %>
+          </div>
+        </div>
       </div>
      <% end %>
 </div>
