--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,54 +4,57 @@
   </div>
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <h3><%= @user.nickname %></h3>
-  <h3><%= @user.place %></h3>
-  <% if @user.sex == "women" %>
-    <h3>女性</h3>
-  <% elsif @user.sex == "men" %>
-    <h3>男性</h3>
-  <% elsif @user.sex == "other" %>
-    <h3>その他</h3>
-  <% end %>
-  <% if @user.year == "under19" %>
-    <h3>19歳以下</h3>
-  <% elsif @user.year == "first20" %>
-    <h3>20~24歳</h3>
-  <% elsif @user.year == "second20" %>
-    <h3>25歳~29歳</h3>
-  <% elsif @user.year == "first30" %>
-    <h3>30歳~34歳</h3>
-  <% elsif @user.year == "second30" %>
-    <h3>35歳~39歳</h3>
-  <% elsif @user.year == "first40" %>
-    <h3>40歳~44歳</h3>
-  <% elsif @user.year == "second40" %>
-    <h3>45歳~49歳</h3>
-  <% elsif @user.year == "first50" %>
-    <h3>50歳~54歳</h3>
-  <% elsif @user.year == "second50" %>
-    <h3>55歳~59歳</h3>
-  <% elsif @user.year == "over60" %>
-    <h3>60歳以上</h3>
-  <% end %>
-  <%= link_to '編集', edit_user_path, class: "btn btn-primary" %>
+<div style="margin-left: 80px" class="row">
+    <div class="col-3">
+      <div class="mb-5">
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <h3><%= @user.nickname %></h3>
+        <h3><%= @user.place %></h3>
+        <% if @user.sex == "women" %>
+        <h3>女性</h3>
+        <% elsif @user.sex == "men" %>
+        <h3>男性</h3>
+        <% elsif @user.sex == "other" %>
+        <h3>その他</h3>
+        <% end %>
+
+        <% if @user.year == "under19" %>
+          <h3>19歳以下</h3>
+        <% elsif @user.year == "first20" %>
+          <h3>20~24歳</h3>
+        <% elsif @user.year == "second20" %>
+          <h3>25歳~29歳</h3>
+        <% elsif @user.year == "first30" %>
+          <h3>30歳~34歳</h3>
+        <% elsif @user.year == "second30" %>
+          <h3>35歳~39歳</h3>
+        <% elsif @user.year == "first40" %>
+          <h3>40歳~44歳</h3>
+        <% elsif @user.year == "second40" %>
+          <h3>45歳~49歳</h3>
+        <% elsif @user.year == "first50" %>
+          <h3>50歳~54歳</h3>
+        <% elsif @user.year == "second50" %>
+          <h3>55歳~59歳</h3>
+        <% elsif @user.year == "over60" %>
+          <h3>60歳以上</h3>
+        <% end %>
+        <%= link_to '編集', edit_user_path, class: "btn btn-primary" %>
+      </div>
     </div>
 
-    <div class="col-lg-4">
+    <div class="col-4">
       <p><h2>お気に入りフェス</h2></p>
       <% @user.favorite_events.each do |favorite_event| %>
         <h4><%= favorite_event.event_name %></h4>
       <% end %>
     </div>
 
-    <div class="col-lg-5">
+    <div class="col-5">
       <p><h2>いいね履歴</h2></p>
       <% @goods.each do |good| %>
-      <%= link_to communities_path(good.comment.user_id) do %>
+        <div class="mb-2">
+          <%= link_to communities_path(good.comment.user_id) do %>
         <%= image_tag good.comment.user.get_profile_image(100,100) %>
       <% end %>
       <%= good.comment.user.nickname %>
@@ -59,7 +62,7 @@
       <%= good.comment.comment %>
       <%= good.comment.created_at %>
       <% end %>
+        </div>
       <p>最新５件まで表示</p><%= link_to '全てのいいねを見る', users_good_path(@user), class: "btn btn-success" %>
     </div>
     </div>
-</div>
