--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="position-relative">
+  <body style="margin-top: -16px"> <!-- ヘッダの前に空白が入っているので消すためにmargin-top: -16px;をしている -->
     <header class="site-header">
       <div class="site-header__top">
         <div class="wrapper site-header__wrapper top">
@@ -101,13 +101,15 @@
       </div>
     </nav>
     </header>
-    <%= yield %>
-    <div class="site-footer position-absolute bottom-0" style="width: 100%; height: 50px; background-color: #000000;">
-    <footer>
-      <div class="text-center mt-3">
-            <div><h6 class="text-white">© All rights reserved by JM.Inc.</h6></div>
-      </div>
-    </footer>
+    <div class="wrapper-body">
+        <%= yield %>
+        <div class="site-footer position-absolute bottom-0" style="width: 100%; height: 50px; background-color: #000000;">
+            <footer>
+              <div class="text-center mt-3">
+                    <div><h6 class="text-white">© All rights reserved by JM.Inc.</h6></div>
+              </div>
+            </footer>
+        </div>
     </div>
   </body>
 </html>
