--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -5,7 +5,7 @@
       <table class="table table-sm">
         <tr>
           <p class="text-center">退会されますと、ご入力いただいたプロフィール情報やいいね履歴など全てのデータが削除されます。</p>
-          <p class="text-center">また、退会日から３０日間経過するまで同一メールアドレスでLIVERS HIGH!!に再登録する事は出来ません。</p>
+          <p class="text-center">退会される場合は「退会する」をクリックしてください。</p>
         </tr>
       </table>
 
