--- a/app/views/public/communities/show.html.erb
+++ b/app/views/public/communities/show.html.erb
@@ -1,49 +1,17 @@
+
 <div class="container">
   <div class="row">
-    <div class="col-md-6 mx-auto"><h4><%= @community.fes_name %></h4></div>
+    <div class="col-md-6 mx-auto">
+        <h4><%= @community.fes_name %></h4>
+    </div>
   </div>
 </div>
 
-<div class="container">
-      <% @community.comments.each do |comment| %>
-      <div class="row">
-        <div class="col-2">
-          <div class="center-block">
-            <%= link_to communities_path(comment.user_id) do %>
-            <%= image_tag comment.user.get_profile_image(100,100) %>
-            <% end %>
-            <%= comment.user.nickname %>
-          </div>
-        </div>
-
-      <div class="col-8">
-          <b><%= comment.community.fes_name %></b>
-          <p><%= comment.comment %></p>
-      </div>
-
-      <div class="col-2">
-          <div style="width: 500px;">
-              <%= comment.created_at %>
-          <% if comment.gooded_by?(current_user) %>
-          <p>
-            <%= link_to comment_goods_path(comment), method: :delete do %>
-           ♥<%= comment.goods.count %> いいね
-          <% end %>
-         </p>
-          <% else %>
-         <p>
-          <%= link_to comment_goods_path(comment), method: :post do %>
-          ♡<%= comment.goods.count %> いいね
-          <% end %>
-         </p>
-        <% end %>
-        </div>
-        </div>
-      </div>
-     <% end %>
+<div class="container" id="goods">
+  <%= render "public/comments/index", {comments: @comments, current_user: @user, path: @path} %>
 </div>
 
-
+<%= flash[:danger] %>
 <%= form_with(model: @comment, local:true) do |f| %>
     <div class="form-group">
         <p>
@@ -53,6 +21,8 @@
         </p>
     </div>
     <div class="form_action row">
-        <%= f.submit '送信',class: 'btn btn-info' %>
+      <div class="p-4">
+          <%= f.submit '送信',class: 'btn btn-info btn-lg' %>
+      </div>
     </div>
 <% end %>
