--- a/app/views/public/users/good.html.erb
+++ b/app/views/public/users/good.html.erb
@@ -1,44 +1,10 @@
+
 <div class="container">
   <div class="row">
     <div class="col-md-3 mx-auto"><h2>いいね履歴一覧</h2></div>
   </div>
 </div>
 
-<div class="container">
-      <% @goods.each do |good| %>
-      <div class="row">
-        <div class="col-2">
-          <div class="center-block">
-            <%= link_to communities_path(good.comment.user_id) do %>
-          <%= image_tag good.comment.user.get_profile_image(100,100) %>
-          <% end %>
-          <%= good.comment.user.nickname %>
-          </div>
-        </div>
-
-        <div class="col-8">
-          <b><%= good.comment.community.fes_name %></b>
-          <p><%= good.comment.comment %></p>
-        </div>
-
-        <div class="col-2">
-          <div style="width: 500px;">
-            <%= good.comment.created_at %>
-        <% if good.comment.gooded_by?(current_user) %>
-          <p>
-            <%= link_to comment_goods_path(good.comment), method: :delete do %>
-           ♥<%= good.comment.goods.count %> いいね
-          <% end %>
-         </p>
-          <% else %>
-         <p>
-          <%= link_to comment_goods_path(good.comment), method: :post do %>
-          ♡<%= good.comment.goods.count %> いいね
-          <% end %>
-         </p>
-        <% end %>
-          </div>
-        </div>
-      </div>
-     <% end %>
+<div class="container" id="goods">
+  <%= render "public/comments/index", {comments: @comments, current_user: @user, path: @path} %>
 </div>
